ajout des reseaux sur le footer

--- a/index.html
+++ b/index.html
@@ -209,6 +209,24 @@
 
   <!-- FOOTER -->
   <footer class="footer">
+    <div class="socials">
+  <a href="https://www.instagram.com/elixiaparfumerie25?igsh=MTM3ZW4wb2Q1a2kxcQ%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="https://www.tiktok.com/@elixiaparfumerie?_r=1&_t=ZS-93c324okCuO" target="_blank" aria-label="TikTok">
+    <i class="fab fa-tiktok"></i>
+  </a>
+
+  <a href="https://www.facebook.com/share/18JeFxHAMM/?mibextid=wwXIfr" target="_blank" aria-label="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="https://www.snapchat.com/add/da.chou?share_id=avXykcVuR6WiNt2be1nZOg&locale=fr_SN" target="_blank" aria-label="Snapchat">
+  <i class="fab fa-snapchat-ghost"></i>
+</a>
+
+  <br><br>
+</div>
     <p>© 2026 ELIXIA Parfumerie – Tous droits réservés</p>
   </footer>
 
